[gd_scene load_steps=3 format=3 uid="uid://cjme6g2nvabd4"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_ue81p"]
[ext_resource type="FontFile" uid="uid://chu0xsvgp2jgb" path="res://assets/Silver.ttf" id="1_wdx84"]

[node name="Menu" type="CanvasLayer" node_paths=PackedStringArray("choose_game_mode")]
script = ExtResource("1_ue81p")
choose_game_mode = NodePath("Window")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wdx84")
theme_override_font_sizes/font_size = 50
text = "start"
icon_alignment = 1

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wdx84")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 153.0
grow_horizontal = 2
size_flags_vertical = 4
theme_override_constants/margin_top = 20

[node name="GameTitle" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("1_wdx84")
theme_override_font_sizes/font_size = 120
text = "PONG THE GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Window" type="Window" parent="."]
initial_position = 2
size = Vector2i(300, 200)
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="Window"]
anchors_preset = -1
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VsAi" type="Button" parent="Window/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wdx84")
theme_override_font_sizes/font_size = 48
text = "P1 vs AI"
icon_alignment = 1

[node name="VsPlayer" type="Button" parent="Window/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wdx84")
theme_override_font_sizes/font_size = 48
text = "P1 vs P2"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="Window/VBoxContainer/VsAi" to="." method="_on_vs_ai_pressed"]
[connection signal="pressed" from="Window/VBoxContainer/VsPlayer" to="." method="_on_vs_player_pressed"]
